--- a/polls/templates/polls/list.html
+++ b/polls/templates/polls/list.html
@@ -57,25 +57,125 @@
         <br>
         <br>
 
-        {% if questions %}
-        <div class="row mb-5">
-            <div class="col-xl-12">
-                <div class="media-boxes">
-                    {% for question in questions %}
-                    <div class="media">
-                        <img src="/static/polls/images/insertions.jpg" alt="Image" class="mr-3">
-                        <a href="/polls/{{ question.id }}/" class="media-body tm-bg-gray">
-                            <div class="tm-description-box">
-                                <h5 class="tm-text-blue">{{ question.question_text }}</h5>
-                            </div>
-                            <div class="tm-buy-box"></div>
+        <div class="row tm-about-row tm-mb-medium">
+            <div class="tm-tab-links-container">
+
+                <ul class="nav nav-tabs" id="tmTab" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link tm-bg-gray tm-media-v-center tm-tab-link active" id="home-tab"
+                            data-toggle="tab" href="#tab1" role="tab" aria-controls="home" aria-selected="false">
+                            <!-- <i class="fas fa-2x fa-music pr-4"></i> -->
+                            <p class="media-body mb-0 tm-media-link">Proin vitae ligula</p>
                         </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link tm-bg-gray tm-media-v-center tm-tab-link" id="profile-tab" data-toggle="tab"
+                            href="#tab2" role="tab" aria-controls="profile" aria-selected="false">
+                            <!-- <i class="fab fa-2x fa-accusoft pr-4"></i> -->
+                            <p class="media-body mb-0 tm-media-link">Nunc nec luctus</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link tm-bg-gray tm-media-v-center tm-tab-link" id="contact-tab" data-toggle="tab"
+                            href="#tab3" role="tab" aria-controls="contact" aria-selected="false">
+                            <!-- <i class="fab fa-2x fa-amazon-pay pr-4"></i> -->
+                            <p class="media-body mb-0 tm-media-link">Etiam vel ligula</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link tm-bg-gray tm-media-v-center tm-tab-link" id="contact-tab" data-toggle="tab"
+                            href="#tab4" role="tab" aria-controls="contact" aria-selected="false">
+                            <!-- <i class="fas fa-2x fa-headphones pr-4"></i> -->
+                            <p class="media-body mb-0 tm-media-link">Sed id magna</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="tm-tab-content-container">
+                <div class="tab-content h-100 tm-bg-gray" id="myTabContent">
+                    <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
+                        <div class="media tm-media-2">
+                            <!-- <i class="fas fa-5x fa-music mb-3 tm-text-pink-dark tm-media-2-icon"></i> -->
+                            <div class="media-body tm-media-body-2">
+                                {% if questions %}
+                                <div class="row mb-5">
+                                    <div class="col-xl-12">
+                                        <div class="media-boxes">
+                                            {% for question in questions %}
+                                            <div class="media">
+                                                <img src="/static/polls/images/insertions.jpg" alt="Image" class="mr-3">
+                                                <a href="/polls/{{ question.id }}/" class="media-body tm-bg-gray">
+                                                    <div class="tm-description-box">
+                                                        <h5 class="tm-text-blue">{{ question.question_text }}</h5>
+                                                    </div>
+                                                    <!-- <div class="tm-buy-box"></div> -->
+                                                    <a href="#" class="btn btn-secondary">Vote</a>
+                                                </a>
+                                            </div>
+                                            {% endfor %}
+                                        </div>
+                                    </div>
+                                </div>
+                                {% endif %}
+                                <!-- <a href="#" class="btn btn-secondary">Read More</a> -->
+                            </div>
+                        </div>
                     </div>
-                    {% endfor %}
+
+                    <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
+                        <div class="media tm-media-2">
+                            <!-- <i class="fab fa-5x fa-accusoft mb-3 tm-text-pink-dark tm-media-2-icon"></i> -->
+                            <div class="media-body tm-media-body-2">
+                                <h2 class="mb-4 tm-text-pink-dark tm-media-2-header">Nunc nec luctus eu mi aliquet</h2>
+                                <p class="mb-4">Phasellus efficitur, ante et bibendum accumsan, nisi tellus fermentum
+                                    eros, eget tincidunt enim orci at arcu. Etiam vel ligula non neque pharetra
+                                    scelerisque mollis ac arcu.</p>
+                                <p class="mb-4">In luctus eu turpis sed sodales. Suspendisse nisi ante, dapibus id purus
+                                    at, tristique ullamcorper dolor. Nullam tempus quam id odio tempus bibendum. Nullam
+                                    vulputate, justo fermentum interdum fermentum, diam elit iaculis lorem, sed puvina.
+                                </p>
+                                <a href="#" class="btn btn-secondary">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
+                        <div class="media tm-media-2">
+                            <!-- <i class="fab fa-5x fa-amazon-pay mb-3 tm-text-pink-dark tm-media-2-icon"></i> -->
+                            <div class="media-body tm-media-body-2">
+                                <h2 class="mb-4 tm-text-pink-dark tm-media-2-header">Etiam vel ligula eu mi aliquet</h2>
+                                <p class="mb-4">Phasellus efficitur, ante et bibendum accumsan, nisi tellus fermentum
+                                    eros, eget tincidunt enim orci at arcu. Etiam vel ligula non neque pharetra
+                                    scelerisque mollis ac arcu.</p>
+                                <p class="mb-4">In luctus eu turpis sed sodales. Suspendisse nisi ante, dapibus id purus
+                                    at, tristique ullamcorper dolor. Nullam tempus quam id odio tempus bibendum. Nullam
+                                    vulputate, justo fermentum interdum fermentum, diam elit iaculis lorem, sed puvina.
+                                </p>
+                                <a href="#" class="btn btn-secondary">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="tab-pane fade" id="tab4" role="tabpanel" aria-labelledby="tab4-tab">
+                        <div class="media tm-media-2">
+                            <!-- <i class="fas fa-5x fa-headphones mb-3 tm-text-pink-dark tm-media-2-icon"></i> -->
+                            <div class="media-body tm-media-body-2">
+                                <h2 class="mb-4 tm-text-pink-dark tm-media-2-header">Sed id magna eu mi aliquet</h2>
+                                <p class="mb-4">Phasellus efficitur, ante et bibendum accumsan, nisi tellus fermentum
+                                    eros, eget tincidunt enim orci at arcu. Etiam vel ligula non neque pharetra
+                                    scelerisque mollis ac arcu.</p>
+                                <p class="mb-4">In luctus eu turpis sed sodales. Suspendisse nisi ante, dapibus id purus
+                                    at, tristique ullamcorper dolor. Nullam tempus quam id odio tempus bibendum. Nullam
+                                    vulputate, justo fermentum interdum fermentum, diam elit iaculis lorem, sed puvina.
+                                </p>
+                                <a href="#" class="btn btn-secondary">Read More</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        {% endif %}
 
         <footer class="row">
             <div class="col-xl-12">
@@ -86,6 +186,8 @@
     </div> <!-- .container -->
 
     </div> <!-- .main -->
+    <script src="/static/polls/js/jquery-3.2.1.slim.min.js"></script>
+    <script src="/static/polls/js/bootstrap.min.js"></script>
 
 </body>
 
