orting the popularity ordering customized with date where popularity is null (0) cover photo changed for different pages

--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -38,7 +38,7 @@
                   <a href="/polls/list/" class="nav-link tm-nav-link tm-text-white">List</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#" class="nav-link tm-nav-link tm-text-white">Results</a>
+                  <a href="#" class="nav-link tm-nav-link tm-text-white">About</a>
                 </li>
               </ul>
             </nav>
@@ -78,6 +78,21 @@
   </div> <!-- .container -->
 
   </div> <!-- .main -->
+  <script src="/static/polls/js/jquery-3.2.1.slim.min.js"></script>
+  <!-- <script>
+
+    /* DOM is ready
+    ------------------------------------------------*/
+    $(function () {
+
+      if (renderPage) {
+        $('body').addClass('loaded');
+      }
+
+      $('.tm-current-year').text(new Date().getFullYear());  // Update year in copyright
+    });
+
+  </script> -->
 </body>
 
 </html>
