--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -11,5 +11,22 @@ li a:hover {
 }
 
 body {
-    background: white url("images/post.jpg") no-repeat;
+    background: white url("images/post.jpg");
+    background-repeat: no-repeat;
+    justify-content: center;
+    align-items: center;
+    max-height: 500px;
+    background-size: cover;
+
 }
+
+button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
