--- a/polls/templates/polls/list.html
+++ b/polls/templates/polls/list.html
@@ -90,12 +90,24 @@
                                         <div class="media-boxes">
                                             {% for question in latest_questions %}
                                             <div class="media">
-                                                <img src="/static/polls/images/tab1.jpg" alt="Image" class="mr-3">
-                                                <div class="media-body tm-bg-gray">
-                                                    <div class="tm-description-box">
-                                                        <h5 class="tm-text-blue">{{ question.question_text }}</h5>
+                                                <div class="row" style="width: 100%;">
+                                                    <div class="col-lg-2">
+                                                        <img src="/static/polls/images/tab1.jpg" alt="Image" class="mr-3">
                                                     </div>
-                                                    <a href="/polls/{{ question.id }}/" class="btn btn-secondary">Vote</a>
+                                                    <div class="col-lg-10">
+                                                        <div class="media-body tm-bg-gray">
+                                                            <div class="row" style="width: 100%;">
+                                                                <div class="col-lg-10">
+                                                                    <div class="tm-description-box">
+                                                                        <h5 class="tm-text-blue">{{ question.question_text }}</h5>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-lg-2">
+                                                                    <a href="/polls/{{ question.id }}/" class="btn btn-secondary">Vote</a>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                             {% endfor %}
@@ -116,12 +128,24 @@
                                         <div class="media-boxes">
                                             {% for question in oldest_questions %}
                                             <div class="media">
-                                                <img src="/static/polls/images/tab2.jpg" alt="Image" class="mr-3">
-                                                <div class="media-body tm-bg-gray">
-                                                    <div class="tm-description-box">
-                                                        <h5 class="tm-text-blue">{{ question.question_text }}</h5>
+                                                <div class="row" style="width: 100%;">
+                                                    <div class="col-lg-2">
+                                                        <img src="/static/polls/images/tab2.jpg" alt="Image" class="mr-3">
                                                     </div>
-                                                    <a href="/polls/{{ question.id }}/" class="btn btn-secondary">Vote</a>
+                                                    <div class="col-lg-10">
+                                                        <div class="media-body tm-bg-gray">
+                                                            <div class="row" style="width: 100%;">
+                                                                <div class="col-lg-10">
+                                                                    <div class="tm-description-box">
+                                                                        <h5 class="tm-text-blue">{{ question.question_text }}</h5>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-lg-2">
+                                                                    <a href="/polls/{{ question.id }}/" class="btn btn-secondary">Vote</a>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                             {% endfor %}
@@ -142,12 +166,24 @@
                                         <div class="media-boxes">
                                             {% for question in high_popular_questions %}
                                             <div class="media">
-                                                <img src="/static/polls/images/tab3.jpg" alt="Image" class="mr-3">
-                                                <div class="media-body tm-bg-gray">
-                                                    <div class="tm-description-box">
-                                                        <h5 class="tm-text-blue">{{ question.question_text }}</h5>
+                                                <div class="row" style="width: 100%;">
+                                                    <div class="col-lg-2">
+                                                        <img src="/static/polls/images/tab3.jpg" alt="Image" class="mr-3">
                                                     </div>
-                                                    <a href="/polls/{{ question.id }}/" class="btn btn-secondary">Vote</a>
+                                                    <div class="col-lg-10">
+                                                        <div class="media-body tm-bg-gray">
+                                                            <div class="row" style="width: 100%;">
+                                                                <div class="col-lg-10">
+                                                                    <div class="tm-description-box">
+                                                                        <h5 class="tm-text-blue">{{ question.question_text }}</h5>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-lg-2">
+                                                                    <a href="/polls/{{ question.id }}/" class="btn btn-secondary">Vote</a>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                             {% endfor %}
@@ -168,12 +204,24 @@
                                         <div class="media-boxes">
                                             {% for question in low_popular_questions %}
                                             <div class="media">
-                                                <img src="/static/polls/images/tab4.jpg" alt="Image" class="mr-3">
-                                                <div class="media-body tm-bg-gray">
-                                                    <div class="tm-description-box">
-                                                        <h5 class="tm-text-blue">{{ question.question_text }}</h5>
+                                                <div class="row" style="width: 100%;">
+                                                    <div class="col-lg-2">
+                                                        <img src="/static/polls/images/tab4.jpg" alt="Image" class="mr-3">        
                                                     </div>
-                                                    <a href="/polls/{{ question.id }}/" class="btn btn-secondary">Vote</a>
+                                                    <div class="col-lg-10">
+                                                        <div class="media-body tm-bg-gray">
+                                                            <div class="row" style="width: 100%;">
+                                                                <div class="col-lg-10">
+                                                                    <div class="tm-description-box">
+                                                                        <h5 class="tm-text-blue">{{ question.question_text }}</h5>
+                                                                    </div>
+                                                                </div>
+                                                                <div class="col-lg-2">
+                                                                    <a href="/polls/{{ question.id }}/" class="btn btn-secondary">Vote</a>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                             {% endfor %}
